# JobAI

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
backend-cv/: app.py  extract.py  test.py
backend-cv/cv_ner_model_V3/ner/: moves
backend-cv/cv_ner_model_V3/vocab/: strings.json
backend-cv/france_travail api/: get_api_data.py  offres.csv
backend-cv/france_travail_api/: get_api_data.py  get_token.py  offres.csv
backend-cv/job_scraper linkedin/job_scraper/: itemsloaders.py  pipelines.py  settings.py
backend-cv/src/: main.py
backend-cv/src/cv_ner_model_V2/: config.cfg
backend-cv/src/cv_ner_model_V3/: meta.json
backend-cv/train_ner/: fixe.py  ner_entities_examples.json  ner_training_150_examples.json  ner_training_200_noisy_fixed.json  ner_training_data_with_text.json  test_model.py  train_cv_ner.py
france_travail/: .gitignore  function_app.py  offres.csv  requirements.txt
france_travail api/: offres.csv  test.py
france_travail api/wtj scraper/: web scrapping.ipynb
front-cv/: ner_data_generator.html  package-lock.json  package.json
front-cv/src/: App.js  Login.js  Swipe.js  Upload.js  firebase.js
frontend/: Dockerfile  entrypoint.sh  live_jobs.py  requirements.txt  streamlit.py
job_scraper/: Dockerfile  entrypoint.sh  requirements.txt
job_scraper/job_scraper/: items.py  settings.py
src/: main.py
src/resume_parser/: resume_ner.py  resume_parser.py  text_extraction.py
src/tools/: logger.py
test api/: .env  get_api_data.py  get_token.py
(+3407 files in other folders)
